--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,10 +1,11 @@
 <h3>Cryptocurrencies by Market Capitalization </h3>
 
 <ul class="tabs" data-tab>
-  <li class="tab-title active"><a href="#panel1">Crypto currencies</a></li>
-  <li class="tab-title"><a href="#panel2">Tab 2</a></li>
-  <li class="tab-title"><a href="#panel3">Tab 3</a></li>
-  <li class="tab-title"><a href="#panel4">Tab 4</a></li>
+  <li class="tab-title active"><a href="#panel1">Home</a></li>
+  <li class="tab-title"><a href="#panel2">Investments</a></li>
+  <li class="tab-title"><a href="#panel3">About us</a></li>
+  <li class="tab-title"><a href="#panel4">Articles</a></li>
+  <li class="tab-title"><a href="#panel5">Contact</a></li>
 </ul>
 <div class="tabs-content">
   <div class="content active" id="panel1">
@@ -53,12 +54,32 @@
     </table>
   </div>
   <div class="content" id="panel2">
-    <p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
+    <div class="sub-header">
+      <hgroup>
+        <h4>Responsive Blog Layout</h4>
+        <h6>Foundation 5 responsive design tutorial</h6>
+      </hgroup>
+    </div>
+    
+    <div class="content">
+      <!-- content --><br><br><br>
+      <% @rss_results.each do | feed | %>
+      <% end %>
+    </div>
+    
   </div>
+  <div class="small-3 large-3 column">
+    <aside class="sidebar">  
+      <!-- sidebar with full height -->
+    </aside>
+  </div>        
   <div class="content" id="panel3">
     <p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p>
   </div>
   <div class="content" id="panel4">
+    <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
+  </div>
+  <div class="content" id="panel5">
     <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
   </div>
 </div>
