--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,2 +1,8 @@
 <%# add navigation links to this file %>
-<li><%= link_to 'About', page_path('about') %></li>
+
+  <li class="tab-title active"><a href="#panel1">Home</a></li>
+  <li class="tab-title"><a href="#panel2">Investments</a></li>
+  <li class="tab-title"><a href="#panel3">About us</a></li>
+  <li class="tab-title"><a href="#panel4">Articles</a></li>
+  <li class="tab-title"><a href="#panel5">Contact</a></li>
+
