--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,12 @@
 <%# navigation styled for Zurb Foundation 5 %>
 <nav class="top-bar" data-topbar>
-  <div class="top-bar-left">    
+  <div class="top-bar-left medium-4 columns">    
     <ul class="title-area">
        <img class="thumbnail" src="/img/mnm-logo.png" alt="mnm logo">
       <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
     </ul>
   </div>
-  <div class="top-bar-right">
+  <div class="top-bar-right medium-6 columns">
     <div class="top-bar-section">
       <ul class="tabs" data-tab>
 	<%= render 'layouts/navigation_links' %>
