add contact form

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -72,7 +72,67 @@
     <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
   </div>
   <div class="content" id="panel5">
-    <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
+    <fieldset> 
+      <legend>Feel free to contact us</legend>
+      <form>
+	<div class="row">
+	  <div class="large-6 columns">
+	    <div class="row collapse prefix-radius">
+              <div class="small-3 columns">
+		<span class="prefix">First Name</span>
+              </div>
+              <div class="small-9 columns">
+		<input type="text" placeholder="Value">
+              </div>
+	    </div>
+	  </div>
+	  <div class="large-6 columns">
+	    <div class="row collapse prefix-radius">
+              <div class="small-3 columns">
+		<span class="prefix">Last Name</span>
+              </div>
+              <div class="small-9 columns">
+		<input type="text" placeholder="Value">
+              </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="row">
+	  <div class="large-6 columns">
+	    <div class="row collapse prefix-radius">
+              <div class="small-3 columns">
+		<span class="prefix">Email</span>
+              </div>
+              <div class="small-9 columns">
+		<input type="text" placeholder="Value">
+              </div>
+	    </div>
+	  </div>
+	  <div class="large-6 columns">
+	    <div class="row collapse prefix-radius">
+              <div class="small-3 columns">
+		<span class="prefix">Phone</span>
+              </div>
+              <div class="small-9 columns">
+		<input type="text" placeholder="Value">
+              </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="row">
+	  <div class="large-12 columns">
+	    <label>Message
+              <textarea placeholder="Leave us a message"></textarea>
+	    </label>
+	  </div>
+	</div>
+	<div class="row">
+	  <div class="large-12 columns">
+	    <a role="button" aria-label="submit form" href="#" class="button">Submit</a>
+	  </div>
+	</div>
+      </form>
+    </fieldset>
   </div>
 </div>
 <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" ></script>
